--- a/Bot-Config/config.json
+++ b/Bot-Config/config.json
@@ -2,9 +2,8 @@
 
   "ytapi_key": "xxxx",
 
-  "token": "",
+  "token": "ODEzODE2MjE5MjQ1MzQ2ODQ2.YDUzag.579wZ9yO2ZGXAzgqUQEq6uqJBXQ",
 
-  "prefix": "."
+  "prefix": "&"
 
 }
-
